RESOLVED FIXED148668
Possible CFArray leak in MediaPlayerPrivateAVFoundationCF.cpp
https://bugs.webkit.org/show_bug.cgi?id=148668
Summary Possible CFArray leak in MediaPlayerPrivateAVFoundationCF.cpp
Joseph Pecoraro
Reported 2015-08-31 21:09:08 PDT
* SUMMARY Possible CFArray leak in MediaPlayerPrivateAVFoundationCF.cpp: RetainPtr<CFArrayRef> avTypes = AVCFURLAssetCopyAudiovisualMIMETypes(); Normally when assigning a "Copy" into a RetainPtr<T> we should adopt.
Attachments
[PATCH] Proposed Fix (4.42 KB, patch)
2015-08-31 21:23 PDT, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (4.38 KB, patch)
2015-08-31 21:27 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-08-31 21:13:41 PDT
Interesting, it seems like two function nearly right next to each other are nearly identical: static const HashSet<String>& avfMIMETypes() static const HashSet<String>& mimeTypeCache() Maybe they can be merged.
Joseph Pecoraro
Comment 2 2015-08-31 21:18:47 PDT
The only different seems to be, one has lowercase strings, and the other doesn't. However, MediaPlayerPrivateAVFoundationObjC only has one implementation, and it does the lowercase strings, so I'll combine to just that one.
Joseph Pecoraro
Comment 3 2015-08-31 21:23:26 PDT
Created attachment 260349 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 4 2015-08-31 21:24:55 PDT
Attachment 260349 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Joseph Pecoraro
Comment 5 2015-08-31 21:27:45 PDT
Created attachment 260350 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 6 2015-09-01 08:49:56 PDT
Comment on attachment 260350 [details] [PATCH] Proposed Fix Clearing flags on attachment: 260350 Committed r189209: <http://trac.webkit.org/changeset/189209>
WebKit Commit Bot
Comment 7 2015-09-01 08:49:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.