Possible CFArray leak in MediaPlayerPrivateAVFoundationCF.cpp https://bugs.webkit.org/show_bug.cgi?id=148668

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-09-01
Reviewed by Eric Carlson.

* platform/graphics/avfoundation/cf/MediaPlayerPrivateAVFoundationCF.cpp:
(WebCore::mimeTypeCache): Deleted.
(WebCore::avfMIMETypes):
Fix the leak in avfMIMETypes. Consolidate on the single implementation.
Note that avfMIMETypes lowercased the inputs and mimeTypeCache did not,
but we now match MediaPlayerPrivateAVFoundationObjC which has one version
that lowercased inputs as well.

(WebCore::MediaPlayerPrivateAVFoundationCF::getSupportedTypes):
(WebCore::MediaPlayerPrivateAVFoundationCF::supportsType):
(WebCore::MediaPlayerPrivateAVFoundationCF::supportsKeySystem):
Convert to th enew verison.

Canonical link: https://commits.webkit.org/166787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189209 268f45cc-cd09-0410-ab3c-d52691b4dbfc